@@ -1,6 +1,5 @@
 package essentialclient.config.entries;
 
-import com.google.common.collect.ImmutableList;
 import essentialclient.config.ConfigListWidget;
 import essentialclient.config.clientrule.*;
 import essentialclient.config.rulescreen.RulesScreen;
@@ -9,9 +8,8 @@ import essentialclient.feature.EssentialCarpetClient;
 import essentialclient.utils.render.RuleWidget;
 import net.minecraft.client.MinecraftClient;
 import net.minecraft.client.font.TextRenderer;
-import net.minecraft.client.gui.Element;
-import net.minecraft.client.gui.Selectable;
 import net.minecraft.client.gui.widget.ButtonWidget;
+import net.minecraft.client.gui.widget.ClickableWidget;
 import net.minecraft.client.gui.widget.TextFieldWidget;
 import net.minecraft.client.render.DiffuseLighting;
 import net.minecraft.client.resource.language.I18n;
@@ -47,16 +45,15 @@ public class NumberListEntry extends BaseListEntry {
 	}
 
 	@Override
-	public List<? extends Element> children() {
-		return ImmutableList.of(this.resetButton, this.numberField);
+	public List<ClickableWidget> selectableChildren() {
+		return List.of(this.resetButton, this.numberField);
 	}
-	
+
 	@Override
-	public boolean charTyped(char chr, int keyCode)
-	{
+	public boolean charTyped(char chr, int keyCode) {
 		return this.numberField.charTyped(chr, keyCode);
 	}
-	
+
 	@Override
 	public boolean keyPressed(int keyCode, int scanCode, int modifiers) {
 		if (keyCode == GLFW.GLFW_KEY_ENTER) {
@@ -68,12 +65,12 @@ public class NumberListEntry extends BaseListEntry {
 		}
 		return super.keyPressed(keyCode, scanCode, modifiers) || this.numberField.keyPressed(keyCode, scanCode, modifiers);
 	}
-	
+
 	@Override
 	public void render(MatrixStack matrices, int index, int y, int x, int width, int height, int mouseX, int mouseY, boolean hovering, float delta) {
 		TextRenderer font = this.client.textRenderer;
-		float fontX = (float)(x + 90 - ConfigListWidget.length);
-		float fontY = (float)(y + height / 2 - 9 / 2);
+		float fontX = (float) (x + 90 - ConfigListWidget.length);
+		float fontY = (float) (y + height / 2 - 9 / 2);
 
 		this.ruleWidget = new RuleWidget(this.ruleName, x - 50, y + 2, 200, 15);
 		this.ruleWidget.drawRule(matrices, font, fontX, fontY, 16777215);
@@ -82,20 +79,20 @@ public class NumberListEntry extends BaseListEntry {
 		this.resetButton.y = y;
 
 		this.resetButton.active = this.clientRule.isNotDefault() || this.invalid;
-		
+
 		this.numberField.x = x + 182;
 		this.numberField.y = y + 3;
 		this.numberField.setEditableColor(this.invalid ? 16733525 : 16777215);
 		if (this.invalid) {
 			DiffuseLighting.enableGuiDepthLighting();
-			client.getItemRenderer().renderGuiItemIcon(new ItemStack(Items.BARRIER), this.numberField.x + this.numberField.getWidth() - 18, this.numberField.y- 1);
+			this.client.getItemRenderer().renderGuiItemIcon(new ItemStack(Items.BARRIER), this.numberField.x + this.numberField.getWidth() - 18, this.numberField.y- 1);
 			DiffuseLighting.disableGuiDepthLighting();
 		}
 
-		this.numberField.render(new MatrixStack(), mouseX, mouseY, delta);
-		this.resetButton.render(new MatrixStack(), mouseX, mouseY, delta);
+		this.numberField.render(matrices, mouseX, mouseY, delta);
+		this.resetButton.render(matrices, mouseX, mouseY, delta);
 	}
-	
+
 	private void setInvalid(boolean invalid) {
 		this.invalid = invalid;
 		this.rulesScreen.setInvalid(invalid);
@@ -109,7 +106,7 @@ public class NumberListEntry extends BaseListEntry {
 			if (clientRule.getType() == ClientRule.Type.INTEGER) {
 				((IntegerClientRule) clientRule).setValue(Integer.parseInt(newValue));
 			}
-			else if (clientRule.getType() == ClientRule.Type.DOUBLE){
+			else if (clientRule.getType() == ClientRule.Type.DOUBLE) {
 				((DoubleClientRule) clientRule).setValue(Double.parseDouble(newValue));
 			}
 			else {
@@ -124,11 +121,6 @@ public class NumberListEntry extends BaseListEntry {
 			isNumber = false;
 		}
 		this.setInvalid(!isNumber);
-	}
-
-	@Override
-	public List<? extends Selectable> selectableChildren() {
-		return ImmutableList.of(this.editButton, this.resetButton, this.numberField);
 	}
 
 	@Override
